# vector-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vector_py/: __init__.py  vec.py  vec2.py  vec3.py
tests/: test_vec2.py  test_vec3.py
