[project]
name = "vector-py"
version = "0.1.0"
description = "An updated implementation of pygame 2d vector class and 3d vector class"
readme = "README.md"
authors = [{ name = "Thomas Harrison", email = "theharrisoncrafter@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest]
pythonpath = ["src"]
addopts = ["--cov=src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
